# DataMorph

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  main.cpp
dependencies/include/glad/: glad.h
dependencies/include/libmatheval/: xmath.h
dependencies/libs/: freetype.lib
dependencies/src/imgui/: imgui.cpp  imgui_impl_glfw.cpp
dependencies/src/libmatheval/: g77_interface.c  scanner.c
include/: App.h  Constants.h  FontManager.h  Utils.h  app.h  resources.h
include/core/: Console.h  Expression.h  FileHandler.h  Framebuffer.h  Graph.h  Header.h  Model.h  Project.h  Regression.h  Settings.h  Shader.h  Stats.h  imgui_extension.h
include/core/gui/: Frame.h  Window.h
include/embedder/: embedder.h
include/gui/: CommonPopups.h  ConsoleWindow.h  EditorWindow.h  FluidWindow.h  FuildWindow.h  GraphWindow.h  MainFrame.h  MainWindow.h  NewProjectWindow.h  PythonWindow.h  SettingsWindow.h  StatsWindow.h  UpdateFrame.h  UpdateWindow.h
include/local/: I18n.h
resources/: resource.h  resources.rc
resources/local/: en_us.i18n  fr_fr.i18n
resources/shaders/: test.vert
src/: App.cpp  Constants.cpp  FontManager.cpp  Utils.cpp  app.cpp
src/core/: Console.cpp  Expression.cpp  FileHandler.cpp  Framebuffer.cpp  Graph.cpp  Header.cpp  Model.cpp  Project.cpp  Regression.cpp  Settings.cpp  Shader.cpp  Texture.cpp  imgui_extension.cpp
src/embedder/: main.cpp
src/gui/: CommonPopups.cpp  ConsoleWindow.cpp  FluidWindow.cpp  GraphWindow.cpp  MainWindow.cpp  NewProjectWindow.cpp  PythonWindow.cpp  SettingsWindow.cpp  StatsWindow.cpp  UpdateWindow.cpp
src/local/: I18n.cpp
x64-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  imgui.ini
x64-debug/.cmake/api/v1/reply/: cache-v2-a4204557a8ee1754ba4a.json  cache-v2-f408a6eadab948f8b360.json  cmakeFiles-v1-3453be6af520e3dc3f69.json  cmakeFiles-v1-afa0b8e30db4f378ecad.json  codemodel-v2-060750e949330d2f368e.json  codemodel-v2-a052b0baf050e14ff2cb.json  codemodel-v2-fba17335012c40e94b23.json  index-2025-01-18T13-27-31-0087.json  index-2025-01-28T17-37-44-0673.json  index-2025-02-03T13-13-21-0216.json  target-DataMorph-Debug-4a044d8a81cdea33d2a8.json  target-DataMorph-Debug-cf3505a778793f0deda0.json  target-DataMorph-Debug-e12757399a8512fb1548.json
x64-realease/: CMakeCache.txt
x64-release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  imgui.ini
x64-release/.cmake/api/v1/reply/: cache-v2-575a9949663d2becbaa8.json  cache-v2-9c3edfe44f5101c465cd.json  cache-v2-fe2017aaa6f0287787d7.json  cmakeFiles-v1-acb13293b91a6454b41c.json  cmakeFiles-v1-bf9309915467973a5238.json  cmakeFiles-v1-df34cd9d947e7e73d259.json  codemodel-v2-1593d92fa0c57100bcdf.json  codemodel-v2-36ad7546e9ef6c056099.json  codemodel-v2-612584dfc2c2c4242c01.json  codemodel-v2-70f8a9f9954e317c9a96.json  codemodel-v2-837193fb519593ce027e.json  index-2025-01-18T12-44-49-0414.json  index-2025-01-22T21-19-16-0646.json  index-2025-01-29T16-27-35-0613.json  index-2025-02-02T18-16-31-0516.json  index-2025-02-03T12-22-12-0236.json  index-2025-02-03T12-42-43-0753.json  target-DataMorph-Release-04ead125234bc9ef59fb.json  target-DataMorph-Release-32d75066ed4c03fa1a8b.json  target-DataMorph-Release-45216f3a4601444c8893.json  target-DataMorph-Release-4722fb931ce5d2f4697b.json  target-DataMorph-Release-fbff48f8892d8c44b4b8.json  toolchains-v1-61e09bfe80fde571057d.json
